--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vite-project",
+  "name": "json-server",
   "private": true,
   "version": "0.0.0",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
