--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-server",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "main": "index.cjs",
   "type": "module",
