--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "json-server",
   "private": false,
   "version": "0.0.0",
-  "main": "index.cjs",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.cjs",
+    "start": "node index.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
