--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "json-server",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "main": "index.js",
+  "type":"module",
   "scripts": {
-    "start": "node index.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
