--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "json-server",
   "private": true,
   "version": "0.0.0",
-  "main": "index.js",
-  "type":"module",
+  "description": "Deploy JSON Server to Vercel",
+  "main": "api/server.js",
+  "type": "module",
   "scripts": {
+    "start": "node api/server.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -14,7 +16,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "boxicons": "^2.1.4",
     "jest": "^29.7.0",
     "json-server": "^1.0.0-beta.1",
