--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.20",
     "axios": "^1.7.3",
     "boxicons": "^2.1.4",
+    "cors": "^2.8.5",
     "jest": "^29.7.0",
     "json-server": "^1.0.0-beta.1",
     "lodash": "^4.17.21",
